// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeButton accept jsx as children 1`] = `
<button
  className="css-i4ctwy"
  onClick={[Function]}
  tabIndex={-1}
>
  <span>
    string
  </span>
</button>
`;

exports[`BadgeButton danger 1`] = `
<button
  className="css-o307zd"
  onClick={[Function]}
  tabIndex={-1}
>
  danger
</button>
`;

exports[`BadgeButton default 1`] = `
<button
  className="css-i4ctwy"
  onClick={[Function]}
  tabIndex={-1}
>
  default
</button>
`;

exports[`BadgeButton outline 1`] = `
<button
  className="css-ml4yrq"
  onClick={[Function]}
  tabIndex={-1}
>
  outline
</button>
`;

exports[`BadgeButton primary 1`] = `
<button
  className="css-361qnz"
  onClick={[Function]}
  tabIndex={-1}
>
  primary
</button>
`;

exports[`BadgeButton success 1`] = `
<button
  className="css-xr9z4s"
  onClick={[Function]}
  tabIndex={-1}
>
  success
</button>
`;

exports[`BadgeButton warning 1`] = `
<button
  className="css-19otvs4"
  onClick={[Function]}
  tabIndex={-1}
>
  warning
</button>
`;
